# Biometric_Attendance_System

./: .gitignore  LICENSE  README.md  admin_service.py  app_display.py  attendance_service.py  database_service.py  face_recognition_service.py  main_app.py  pyproject.toml
